--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #spring.data.r2dbc.repositories.enabled=true
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/testdb
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/aws_sgs_db
 spring.r2dbc.username=postgres
-spring.r2dbc.password=123
+spring.r2dbc.password=Ninja@13
